--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Site Title
-description:      Describe your website here.
+title:            Excited and Confused
+description:      Man it's so loud in here...
 disqus_shortname: 
-reading_time:     true
+reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
