--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ owner:
   name:           Mike Chambers
   avatar:         avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
-  email:          chambers.mike@gmail.com
+  email:          ...e@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   #twitter:        
   #facebook:       
