--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://www.codingmatter.com/
+url: http://www.codingmatter.com
 
 # Owner/author information
 owner:          
