--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ owner:
   #flickr:         
   #tumblr:         
   # google plus id, include the '+', eg +mmistakes
-  google_plus: +chambers.mike
+  google_plus: +MikeChambers1
 
 # Background image to be tiled on all pages
 background: 
