--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title:            Excited and Confused
-description:      Man it's so loud in here...
-disqus_shortname: 
+title:            "&lt;Simple.Matter.of.Coding/&gt;"
+description:      Simple Matter of Coding
+disqus_shortname: miesch1
 reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: http://www.codingmatter.com
+#url: http://www.codingmatter.com
 
 # Owner/author information
 owner:          
