How about the correct shortname...

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            "&lt;Simple.Matter.of.Coding/&gt;"
 description:      Simple Matter of Coding
-disqus_shortname: miesch1
+disqus_shortname: codingmatter
 reading_time:     false
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
