Manually forking Neo-HPSTR project into this project.
I like the header that the Neo-HPSTR fork took on this original HPSTR
project. Couldn't figure out how to do it with git, so had to simply
manually merge files. This is fairly close to baseline, with several
files still mathcing the HPSTR theme.

--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,43 @@
-title:            "&lt;Simple.Matter.of.Coding/&gt;"
+title:            Coding Matter
 description:      Simple Matter of Coding
+# put your disqus here
 disqus_shortname: codingmatter
 reading_time:     false
 words_per_minute: 200
+logo:             images/logo.png # logo visible in the topbar
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 #url: http://www.codingmatter.com
 
+# draw your top menu here
+# each item must have a title and a url.
+#   To list post categories. use type: 'categories'
+#   To create sub categories. add a submenu item
+# See the example
+menu:
+  - title: 'Home'
+    url: '/'
+  - title: 'Fork'
+    url: 'http://github.com/aron-bordin/neo-hpstr-jekyll-theme'
+  - title: 'Install'
+    url: '/theme-setup/'
+  - title: 'Tags'
+    url: '/tags'
+  - title: 'Categories'
+    url: '/categories'
+    type: 'categories'
+  - title: 'Favorites'
+    url: '#'
+    submenu:
+      - title: 'Code Highlighter'
+        url: '/intro/code-highlighting-post/'
+      - title: 'Sample Post'
+        url: '/intro/sample-post/'
+
 # Owner/author information
 owner:          
   name:           Mike Chambers
-  avatar:         avatar.jpg
+  avatar:         images/avatar.jpg
   bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
   email:          ...e@gmail.com
   # Social networking links used in footer. Update and remove as you like.
@@ -36,6 +63,7 @@ bing_verify:
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
+locale:      en_US
 future:      false  # publish future dated posts --  true, false (default) 
 highlighter: rouge
 markdown:    kramdown
@@ -54,6 +82,9 @@ permalink:   /:categories/:title/
 # Amount of post to show on home page
 paginate: 5
 
+# if true, shows the floatting share buttons
+float_share: true
+
 kramdown:
   input: GFM
   auto_ids: true
@@ -62,28 +93,16 @@ kramdown:
   toc_levels: 1..6
   enable_coderay: false
 
-include: 
-  - .htaccess
-exclude: 
-  - "*.less"
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - .asset-cache
-  - .bundle
-  - .jekyll-assets-cache
-  - .sass-cache
-  - CHANGELOG
-  - Capfile
-  - Gemfile
-  - Gruntfile.js
-  - LICENSE
-  - README
-  - Rakefile
-  - config
-  - gulpfile.js
-  - lib
-  - log
-  - node_modules
-  - package.json
-  - spec
-  - tmp
+# Octopress
+# Default extensions
+post_ext: md
+page_ext: md
+# Found in _templates/
+post_layout: post
+page_layout: page
+# Format titles with titlecase?
+titlecase: true
+
+include: [".htaccess"]
+exclude: ["lib", "config.rb", "Capfile", "config", "Gemfile", "Gemfile.lock", "README.md", "LICENSE", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
+gems: [jekyll-paginate]
