--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description:      Simple Matter of Coding
 disqus_shortname: codingmatter
 reading_time:     false
 words_per_minute: 200
-logo:             images/logo1.png # logo visible in the topbar
+logo:             images/logo.png # logo visible in the topbar
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
 #url: http://www.codingmatter.com
