--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ words_per_minute: 200
 logo:             images/logo.png # logo visible in the topbar
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-#url: http://www.codingmatter.com
+url: http://www.codingmatter.com
 
 # draw your top menu here
 # each item must have a title and a url.
