--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ menu:
   - title: 'Categories'
     url: '/categories'
     type: 'categories'
+  - title: 'Tags'
+    url: '/tags/'
   - title: 'About'
     url: '/about/'
 
@@ -55,13 +57,13 @@ social:
 background: background.png
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
-google_verify:      
+google_analytics: UA-85975325-1
+google_verify: 1fmuodimnXxew1Eqlfcvytfkr-fdm3ty_BW5laZlivQ
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Denver
 locale:      en_US
 future:      false  # publish future dated posts --  true, false (default) 
 highlighter: rouge
@@ -73,7 +75,7 @@ sass:
   style: compressed
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
+permalink:   date
 
 # Amount of post to show on home page
 paginate: 5
